# Verdade

./: .gitignore  README.md
backend/: .env.example  .gitignore  database.py  evaluate.py  generate_synthetic.py  inspect_data.py  inspect_format.py  main.py  model.py  predictions.db  pyproject.toml  requirements.txt  schemas.py  synthetic_test.csv
backend/app/: config.py
backend/app/models/: loader.py
backend/app/routers/: history.py  predict.py
backend/app/schemas/: history.py  predict.py
backend/app/services/: history.py  inference.py
frontend/: .env.example  .gitignore
frontend/app/: page.tsx
frontend/components/: BatchAnalyzer.tsx  CTASection.tsx  DetectorSection.tsx  FeaturesSection.tsx  Footer.tsx  HeroSection.tsx  HowItWorks.tsx  MarqueeSection.tsx  Navbar.tsx  StatsSection.tsx
frontend/lib/: api.ts
notebooks/: Urdu_fakeNews.ipynb
