[project]
name = "sachai-backend"
version = "0.1.0"
description = "SachAI — Urdu Fake News Detection API"
requires-python = ">=3.10,<3.13"
dependencies = [
    "aiosqlite==0.20.0",
    "fastapi==0.111.0",
    "numpy==1.26.0",
    "pydantic==2.7.0",
    "python-dotenv==1.0.0",
    "scikit-learn==1.4.0",
    "torch==2.2.0",
    "transformers==4.40.0",
    "uvicorn[standard]==0.29.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"
