[project]
name = "backend"
version = "0.1.0"
description = "Verdade — Urdu Fake News Detection API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.138.0",
    "uvicorn>=0.49.0",
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "sentencepiece>=0.2.0",
    "protobuf>=4.25.0",
    "python-dotenv>=1.0.0",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
]
